# k9s-rust

./: Cargo.toml  README.md
src/: app.rs  events.rs  main.rs  ui.rs
src/handlers/: input.rs
src/k8s/: mod.rs  watcher.rs
